// HydroFast App - Simplified ERD (DBML Format)
// MVP for local use

Table users {
  id integer [pk, increment] // Auto-incrementing primary key
  first_name varchar
  last_name varchar
  email varchar [unique, not null]
  password_hash varchar [not null, note: 'Store hashed passwords only']
  created_at timestamp [default: `now()`] // Default to current time on creation
}

Table patients {
  id integer [pk, increment] // Auto-incrementing primary key
  // Foreign key reference defined below
  user_id integer [note: 'ID of the user who manages this patient (Optional if strictly single-user)']
  first_name varchar
  last_name varchar
  identifier varchar [note: 'NRIC or Passport Number']
  contact_no varchar // Optional contact number, nullable
  created_at timestamp [default: `now()`]
}

Table scans {
  id integer [pk, increment] // Auto-incrementing primary key, serves as Scan ID
  // Foreign key reference defined below
  patient_id integer [not null, note: 'ID of the patient this scan belongs to']
  scan_datetime timestamp [note: 'Timestamp for Scan Date in UI']
  original_image_path varchar [note: 'Path to the input image file']
  status varchar [note: 'Enum: Processing, Completed, Failed']
  stl_file_path varchar [note: 'Path to the generated 3D Model file (STL), null until completed']
  gcode_file_path varchar [note: 'Path to the generated Print file (G-code), null until completed']
  created_at timestamp [default: `now()`]
}

// --- Relationships ---

// Defines the foreign key relationship: One User manages zero or more Patients
Ref user_patients: users.id < patients.user_id

// Defines the foreign key relationship: One Patient has zero or more Scans
Ref patient_scans: patients.id < scans.patient_id [delete: cascade] // Example: If patient is deleted, delete their scans too
// Note: the [not null] constraint for scans.patient_id is defined within the Table scans definition itself.